--- a/front-end/styleVars.css
+++ b/front-end/styleVars.css
@@ -25,14 +25,6 @@ html, body {
 
 /* ---------------------------------------------- DEFAULT SOCIAL ICON STYLING */
 
-.sample img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    z-index: 1;
-    max-height: 500px;
-
-}
 
 .socials {
     display: flex;
